# python-intermetiate-inflammation

./: LICENSE.md  README.md  inflammation-analysis.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
inflammation/: models.py  views.py
tests/: test_models.py  test_patient.py
